# iot-ci-poc

./: .gitmodules  README.md
balena/: README.md  docker-compose.yml
balena/dashboard/: Cargo.toml  Makefile.toml  index.html
balena/dashboard/backend/: Cargo.toml
balena/dashboard/backend/src/: main.rs
balena/dashboard/backend/static/: index.html
balena/dashboard/frontend/: Cargo.toml
balena/dashboard/frontend/src/: lib.rs
balena/dashboard/protocol/: Cargo.toml
balena/dashboard/protocol/src/: lib.rs
balena/jenkins-swarm-client/: Dockerfile.template  start.sh
balena/label-gen/: .gitignore  Cargo.toml  Dockerfile.template  README.md  config.toml.example
balena/label-gen/src/: main.rs
jenkins/: README.md  docker-compose.yml
mender/: run.sh
rpi/: README.md  build.sh  convert.sh  flash.sh  mount-img.sh
rpi/stage-common/00-bluetooth/: 00-packages  01-run.sh
rpi/stage-common/01-jenkins/: 00-packages  01-run.sh
rpi/stage-common/01-jenkins/files/: jenkins-swarm-client.service  start.sh
rpi/stage-rpi0w/00-patches/: 01-cmdline.diff  02-config.diff  series
